validator_derive/tests/compile-fail/length/wrong_type.rs
use validator::Validate;

#[derive(Validate)]
struct Test {
    #[validate(length())]
    s: usize,
}

fn main() {}
