validator_derive/tests/compile-fail/length/wrong_type.stderr
error: proc-macro derive panicked
 --> $DIR/wrong_type.rs:3:10
  |
3 | #[derive(Validate)]
  |          ^^^^^^^^
  |
  = help: message: Validator `length` can only be used on types `String`, `&str`, Cow<'_,str> or `Vec` but found `usize` for field `s`
